Prevent overlap of divs. Fixes #139

--- a/janitor/site/_static/alabaster.css
+++ b/janitor/site/_static/alabaster.css
@@ -45,6 +45,7 @@ div.footer {
     font-size: 14px;
     color: #888;
     text-align: right;
+    clear: both;
 }
 
 div.footer a {
